grafana-loki/yamlshost/loki.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  generation: 8
  labels:
    app: loki
    app.kubernetes.io/managed-by: Helm
    chart: loki-2.16.0
    heritage: Helm
  name: loki
  namespace: grafana-loki
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: loki
  serviceName: loki-headless
  template:
    metadata:
      annotations:
        checksum/config: 0b785167ce123a8028333c8058aa3faa2aece80df4522a7e0dc78ee9a8b6aca8
        prometheus.io/port: http-metrics
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: loki
        name: loki
        release: loki
    spec:
      affinity: {}
      containers:
      - args:
        - -config.file=/etc/loki/loki.yaml
        image: grafana/loki:2.6.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: http-metrics
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: loki
        ports:
        - containerPort: 3100
          name: http-metrics
          protocol: TCP
        - containerPort: 9095
          name: grpc
          protocol: TCP
        - containerPort: 7946
          name: memberlist-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: http-metrics
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /etc/loki
          name: config
        - mountPath: /data
          name: storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
      serviceAccount: loki
      serviceAccountName: loki
      terminationGracePeriodSeconds: 4800
      volumes:
      - emptyDir: {}
        name: tmp
      - name: config
        secret:
          defaultMode: 420
          secretName: loki
      # - hostPath:
      #     path: /home/logs/
      #   name: storage
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        storageClassName: local-path   #  ^=^q^h important
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5G
  updateStrategy:
    type: RollingUpdate
