grafana-loki/yamlshost/ingress.yml
#ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-grafana
  namespace: grafana-loki
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: lokiprd.deem.io
    http:
      paths:
      - backend:
          service:
            name: loki-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
